// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompliancePolicyCard expect to render without error 1`] = `
<Card
  widget-id="REF_ID"
>
  <CardHeader>
    <TextContent>
      <Text
        component="h2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
          width={0}
        >
          Test Policy
           
          <PolicyPopover
            policy={
              Object {
                "businessObjective": Object {
                  "title": "BO",
                },
                "complianceThreshold": 90,
                "compliantHostCount": 10,
                "id": "ID",
                "name": "Test Policy",
                "refId": "REF_ID",
                "totalHostCount": 15,
              }
            }
          />
        </Truncate>
      </Text>
      <Grid>
        <GridItem
          span={12}
          style={
            Object {
              "display": "inline-flex",
            }
          }
        >
          <TextContent>
            <span
              style={
                Object {
                  "fontSize": "30px",
                  "fontWeight": "bold",
                }
              }
            >
              10
            </span>
            <span
              style={
                Object {
                  "fontWeight": "500",
                }
              }
            >
               
              of
               
            </span>
            <span
              style={
                Object {
                  "fontSize": "30px",
                  "fontWeight": "bold",
                }
              }
            >
              15
            </span>
          </TextContent>
        </GridItem>
        <GridItem
          span={12}
        >
          <Text>
            Systems meet compliance threshold
          </Text>
        </GridItem>
      </Grid>
    </TextContent>
  </CardHeader>
  <CardBody>
    <Grid>
      <GridItem
        span={12}
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <div
          className="chart-inline"
        >
          <div
            className="card-chart-container"
          >
            <ChartDonut
              data={
                Array [
                  Object {
                    "x": "Compliant",
                    "y": 10,
                  },
                  Object {
                    "x": "Non-compliant",
                    "y": 5,
                  },
                ]
              }
              height={300}
              identifier="TestPolicy"
              innerRadius={122}
              subTitle="Systems above threshold"
              themeColor="blue"
              themeVariant="light"
              title="66%"
              width={300}
            />
          </div>
        </div>
      </GridItem>
    </Grid>
  </CardBody>
  <CardFooter>
    <Grid>
      <GridItem
        span={6}
      >
        <TextContent>
          <Text
            component="small"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            <Link
              to="/reports/ID"
            >
              View report
            </Link>
          </Text>
          <Text
            component="small"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            <Link
              to="/policies/ID"
            >
              View policy
            </Link>
          </Text>
        </TextContent>
      </GridItem>
    </Grid>
  </CardFooter>
</Card>
`;

exports[`CompliancePolicyCard onMousover/onMouseout changes to state to the full policy name on hover and back to truncated 1`] = `
Object {
  "cardTitle": <React.Fragment>
    Test Policy
     
    <PolicyPopover
      policy={
        Object {
          "businessObjective": Object {
            "title": "BO",
          },
          "complianceThreshold": 90,
          "compliantHostCount": 10,
          "id": "ID",
          "name": "Test Policy",
          "refId": "REF_ID",
          "totalHostCount": 15,
        }
      }
    />
  </React.Fragment>,
}
`;

exports[`CompliancePolicyCard onMousover/onMouseout changes to state to the full policy name on hover and back to truncated 2`] = `
Object {
  "cardTitle": <Truncate
    ellipsis="…"
    lines={1}
    trimWhitespace={false}
    width={0}
  >
    Test Policy
     
    <PolicyPopover
      policy={
        Object {
          "businessObjective": Object {
            "title": "BO",
          },
          "complianceThreshold": 90,
          "compliantHostCount": 10,
          "id": "ID",
          "name": "Test Policy",
          "refId": "REF_ID",
          "totalHostCount": 15,
        }
      }
    />
  </Truncate>,
}
`;
